# gitfetch

./: .gitignore  README.md  README2.md  TODO.txt  gitfetch.py  pyproject.toml  requirements.txt  todo.txt
.github/workflows/: live-provider-smoke.yml  static-analysis.yml  tests.yml
Formula/: gitfetch.rb
gitfetch/: __init__.py  cache.py  cli.py  completions.py  config.py  formats.py  github_api.py  images.py  language_icons.py  main.py  modes.py  providers.py  render.py
gitfetch/modules/: __init__.py  builtin.py  plugins.py
installer/: installation.py  mainInstall.sh
src/: gitfetch.py  installation.py
src/gitfetch-build/lib/: gitfetch.py
tests/: test_cache.py  test_cli.py  test_completions.py  test_config.py  test_images.py  test_integration.py  test_live_providers.py  test_modes.py  test_modules.py  test_providers.py  test_render.py
