[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gitfetch"
version = "2.0.0"
description = "GitHub user info displayed as ASCII art in terminal"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "Pillow",
]

[project.scripts]
gitfetch = "gitfetch.main:main"
