[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitfetch"
version = "2.0.0"
description = "Configurable GitHub profile fetch for the terminal"
readme = "README2.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "requests",
    "Pillow",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/gongahkia/gitfetch"
Documentation = "https://github.com/gongahkia/gitfetch"
Repository = "https://github.com/gongahkia/gitfetch"

[project.scripts]
gitfetch = "gitfetch.main:main"

[tool.setuptools.packages.find]
include = ["gitfetch*"]
