[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitfetch"
version = "2.0.0"
description = "Configurable GitHub profile fetch for the terminal"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "requests>=2.31.0,<3.0.0",
    "Pillow>=10.0.0,<12.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11,<1",
    "mypy>=1.15,<2",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "skip"

[project.urls]
Homepage = "https://github.com/gongahkia/gitfetch"
Documentation = "https://github.com/gongahkia/gitfetch"
Repository = "https://github.com/gongahkia/gitfetch"

[project.scripts]
gitfetch = "gitfetch.main:main"

[tool.setuptools.packages.find]
include = ["gitfetch*"]

[tool.setuptools.package-data]
gitfetch = ["assets/language-icons/*.png", "assets/language-icons/LICENSE-devicon.txt"]
